--- a/hw12_13_14_15_calendar/configs/config.toml
+++ b/hw12_13_14_15_calendar/configs/config.toml
@@ -1,5 +1,17 @@
+environment = "development"
+host = "0.0.0.0"
+port = 5005
+
 [logger]
 level = "INFO"
+
+[storage]
+host = "0.0.0.0"
+port = "5432"
+user = "calendar_root"
+password = "1111"
+name = "calendar_db"
+
 
 # TODO
 # ...
