--- a/hw12_13_14_15_calendar/Makefile
+++ b/hw12_13_14_15_calendar/Makefile
@@ -4,11 +4,15 @@ DOCKER_IMG="calendar:develop"
 GIT_HASH := $(shell git log --format="%h" -n 1)
 LDFLAGS := -X main.release="develop" -X main.buildDate=$(shell date -u +%Y-%m-%dT%H:%M:%S) -X main.gitHash=$(GIT_HASH)
 
+ifndef config
+	config=./configs/config.development.toml
+endif
+
 build:
 	go build -v -o $(BIN) -ldflags "$(LDFLAGS)" ./cmd/calendar
 
-run: build
-	$(BIN) -config ./configs/config.toml
+run-local: build
+	$(BIN) -c $(config)
 
 build-img:
 	docker build \
@@ -26,9 +30,26 @@ test:
 	go test -race ./internal/... ./pkg/...
 
 install-lint-deps:
-	(which golangci-lint > /dev/null) || curl -sSfL https://raw.githubusercontent.com/golangci/golangci-lint/master/install.sh | sh -s -- -b $(shell go env GOPATH)/bin v1.41.1
+	#(which golangci-lint > /dev/null) || curl -sSfL https://raw.githubusercontent.com/golangci/golangci-lint/master/install.sh | sh -s -- -b $(shell go env GOPATH)/bin v1.41.1
 
 lint: install-lint-deps
-	golangci-lint run ./...
+	/home/otogushakov/go/bin/golangci-lint run ./...
+
+run-integration-tests:
+	@docker-compose -f deployments/docker-compose.yml -f deployments/docker-compose.stage.yml -f deployments/docker-compose.local.yml \
+		--project-directory ./configs/ up \
+		 --build --abort-on-container-exit
+	@docker-compose -f deployments/docker-compose.yml -f deployments/docker-compose.stage.yml -f deployments/docker-compose.local.yml \
+		--project-directory ./configs/ down \
+        --rmi local \
+		--volumes \
+		--timeout 60; \
+
+migrate-up:
+	$(BIN) migrate -up -c $(config)
+
+migrate-down:
+	$(BIN) migrate -down -c $(config)
+
 
 .PHONY: build run build-img run-img version test lint
